--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ a {
 /* Media Queries for larger screens */
 @media (max-width: 600px) {
   body {
-    padding: 0;
+    padding: 20px;
   }
 
   header nav ul {
